Aligns text and logo in header. Fixes #20

--- a/prosjekt2/src/index.css
+++ b/prosjekt2/src/index.css
@@ -45,24 +45,34 @@ h1 {
   z-index: 1;
 }
 
-.icon {
-  display: flex;
-  align-items: center; /* You can use this to vertically center the image and text within the icon div */
-  margin-right: 10px; /* Add some margin between the image and the heading */
-}
-
 .home {
   position: fixed;
   right: 3%;
+}
+
+.logoAndTitle {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  text-decoration: none;
+  color: inherit;
+}
+
+.icon {
+  display: flex;
+  margin-top: 7px; /* Adjust the margin to position the icon lower */
+  margin-left: 5px; /* Add margin for spacing */
 }
 
 .headerName {
   font-family: Copperplate, sans-serif;
   color: black;
   font-size: 30px;
-  padding-left: 5px;
-  padding-bottom: 13px;
+  margin-left: 5px;
+  margin-top: 10px; /* Move the text higher */
+  margin-bottom: 1; /* Remove margin from the bottom */
 }
+
 .searchContainer {
   display: flex;
   flex-direction: column;
